<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cv_container"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginLeft="@dimen/dp8"
        android:layout_marginBottom="@dimen/dp8"
        android:layout_marginRight="@dimen/dp8"
        card_view:contentPaddingBottom="@dimen/dp8"
        card_view:contentPaddingTop="@dimen/dp8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp16"
            tools:context=".ui.main.MainFragment">

        <TextView
                android:id="@+id/tv_label_first_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_label_first_name"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        <TextView
                android:id="@+id/tv_data_first_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/tv_label_first_name"
                app:layout_constraintTop_toBottomOf="@+id/tv_label_first_name"
                app:layout_constraintEnd_toStartOf="@id/guidline_vert_50"
                android:text="@string/dm_tv_data_first_name"/>

        <TextView
                android:id="@+id/tv_label_sur_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_data_first_name"
                android:text="@string/tv_label_sur_name"/>
        <TextView
                android:id="@+id/tv_data_sur_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/tv_label_sur_name"
                app:layout_constraintTop_toBottomOf="@+id/tv_label_sur_name"
                app:layout_constraintEnd_toStartOf="@id/guidline_vert_50"
                android:text="@string/dm_tv_data_sur_name"/>

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidline_vert_50"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".50"/>

        <TextView
                android:id="@+id/tv_label_issue_cnt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/guidline_vert_50"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/tv_label_issue_cnt"/>

        <TextView
                android:id="@+id/tv_data_issue_cnt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/tv_label_issue_cnt"
                app:layout_constraintTop_toBottomOf="@+id/tv_label_issue_cnt"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/dm_tv_data_issue_cnt"/>

        <TextView
                android:id="@+id/tv_label_birth_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/tv_label_issue_cnt"
                app:layout_constraintTop_toBottomOf="@+id/tv_data_issue_cnt"
                android:text="@string/tv_label_birth_date"/>

        <TextView
                android:id="@+id/tv_data_birth_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/tv_label_issue_cnt"
                app:layout_constraintTop_toBottomOf="@+id/tv_label_birth_date"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/dm_tv_data_birth_date"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
